--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 server.port = 8080
 server.servlet.context-path = /wiki
 
-## 增加数据库连接，使用云数据库
+## 增加数据库连接，使用阿里云数据库
 spring.datasource.url = jdbc:mysql://rm-bp1dq63p2429p6n0gfo.mysql.rds.aliyuncs.com/wiki?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai&allowMultiQueries=true
 spring.datasource.username = wiki
 spring.datasource.password = Hua199702
